# soundtouchForAndroid

./: .gitignore  build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt
src/main/res/values/: strings.xml
